@@ -1,3 +1,8 @@
+2007-02-24  Roger Sayle  <roger@eyesopen.com>
+
+        PR fortran/30400
+        * gfortran.dg/forall_10.f90: New test case.
+
 2007-02-23  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR fortran/30681
